yzy 集成mybatisplus；添加mapper生成类；更新数据库配置信息；生成登录日志记录模块

--- a/springboot/src/main/resources/application.yml
+++ b/springboot/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 server:
   port: 8090
   servlet:
-    context-path: /com.landkay.springBoot
+    context-path: /
   session-timeout: 30
   tomcat:
     max-threads: 0
