--- a/springboot/src/main/resources/application-dev.yml
+++ b/springboot/src/main/resources/application-dev.yml
@@ -1,8 +1,8 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/mybatis?useUnicode=true&characterEncoding=UTF-8
-    username: landkay
-    password: landkay
+    url: jdbc:mysql://localhost:3306/ips?useUnicode=true&characterEncoding=UTF-8
+    username: root
+    password: icbcips
     type: com.alibaba.druid.pool.DruidDataSource
     driver-class-name: com.mysql.jdbc.Driver
     maxActive: 20
