--- a/web-view/teacher_talk_front/package.json
+++ b/web-view/teacher_talk_front/package.json
@@ -4,12 +4,13 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
+    "build": "vue-cli-service build --mode production",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
+    "less-loader": "^6.1.0",
     "vant": "^2.12.12",
     "vue": "^2.6.11",
     "vue-axios": "^3.2.4",
