--- a/springboot/pom.xml
+++ b/springboot/pom.xml
@@ -22,6 +22,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
+        <swagger.verdion>2.9.2</swagger.verdion>
     </properties>
 
     <dependencies>
@@ -136,6 +137,17 @@
             <version>4.5.5</version>
         </dependency>
 
+        <!-- swagger依赖 -->
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger-ui</artifactId>
+            <version>2.9.2</version>
+        </dependency>
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger2</artifactId>
+            <version>${swagger.verdion}</version>
+        </dependency>
     </dependencies>
 
 
